--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,14 +1,14 @@
 i.icon {
-    font-size: 2em;
+  font-size: 2em;
 }
 .container.main {
-    margin-top: 7em;
+  margin-top: 7em;
 }
 
 .delete-form {
-    display: inline;
+  display: inline;
 }
 
 .text-white {
-    color: #FFFFFF;
+  color: #ffffff;
 }
