--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,22 +1,34 @@
 <% include ./partials/header %>
 
 <div class="mt-5 border mx-auto col-md-10 col-lg-8 mx-auto">
-    <div class="col-md-12 text-center">
-        <h1>Login</h1>
-    </div> 
-    <form action="/login" method="POST">
-        <div class="form-group">
-            <label for="inputUsername">Username</label>
-            <input type="text" class="form-control" id="inputUsername" name="username" placeholder="username">
-        </div>
-        <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword" name="password" placeholder="password">
-        </div>
-        <div class="text-center">
-            <button class="btn btn-primary" type="submit" > Login </button>   
-        </div>
-    </form> 
+  <div class="col-md-12 text-center">
+    <h1>Login</h1>
+  </div>
+  <form action="/login" method="POST">
+    <div class="form-group">
+      <label for="inputUsername">Username</label>
+      <input
+        type="text"
+        class="form-control"
+        id="inputUsername"
+        name="username"
+        placeholder="username"
+      />
+    </div>
+    <div class="form-group">
+      <label for="inputPassword">Password</label>
+      <input
+        type="password"
+        class="form-control"
+        id="inputPassword"
+        name="password"
+        placeholder="password"
+      />
+    </div>
+    <div class="text-center">
+      <button class="btn btn-primary" type="submit">Login</button>
+    </div>
+  </form>
 </div>
 
 <% include ./partials/footer %>
