--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -6,12 +6,15 @@
     <p>Author : <strong> <%= comment.author.username %> </strong></p>
   </div>
   <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
-    <form action="/posts/<%= post._id %>/comments" method="POST">
+    <form
+      action="/posts/<%= post._id %>/comments/<%= comment._id %>?_method=PUT"
+      method="POST"
+    >
       <div class="form-group">
         <label>Comment</label>
         <textarea class="form-control" name="comment[text]" rows="8" required>
-            <%= comment.text %>
-        </textarea>
+<%= comment.text %></textarea
+        >
       </div>
       <div class="text-center">
         <button class="btn btn-primary" type="submit">Edit the comment</button>
