--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
 
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">
-        2019 Riccardo Lazzari
+        Made by Riccardo Lazzari
       </div>
       <!-- Copyright -->
   
