--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -27,8 +27,8 @@
       <div class="form-group">
         <label>Content</label>
         <textarea class="form-control" name="post[body]" rows="8" required>
-            <%= post.body %>
-        </textarea>
+<%= post.body %></textarea
+        >
       </div>
       <div class="text-center">
         <button class="btn btn-primary" type="submit">Edit the post</button>
