--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -9,8 +9,7 @@
     >
   </div>
 </div>
-
-<% posts.forEach(function(post){ %>
+<% posts.reverse().forEach(function(post){ %>
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-10 col-lg-8 mx-auto border-bottom mb-5">
