--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -14,10 +14,14 @@
   <div class="row">
     <div class="col-md-10 col-lg-8 mx-auto border-bottom mb-5">
       <h2 class="post-title"><%= post.title %></h2>
-      <p><em>Posted by <%= post.author.username %> </em></p>
-      <img class="img-fluid" src="<%= post.image %>" />
+      <p>
+        <em
+          >Posted by <%= post.author.username %> at <%=
+          post.created.toDateString() %>
+        </em>
+      </p>
+      <img class="img-fluid" src="/img/posts/<%= post.image %>" />
       <p><%= post.body.substring(0, 100) %>...</p>
-      <p><span><%= post.created %></span></p>
       <a href="/posts/<%= post._id%>">Read More</a>
     </div>
   </div>
