--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -4,7 +4,7 @@
     <h1>Create a new Post</h1>
   </div>
   <div class="border mx-auto col-md-10 col-lg-8 mx-auto">
-    <form action="/posts" method="POST">
+    <form action="/posts" method="POST" enctype="multipart/form-data">
       <div class="form-group">
         <label>Title</label>
         <input
@@ -16,13 +16,20 @@
         />
       </div>
       <div class="form-group">
-        <label>Image (put your image link)</label>
+        <label for="post[image]">Choose an Image</label>
         <input
+          class="form-control"
+          type="file"
+          id="post[image]"
+          name="post[image]"
+          accept="image/*"
+        />
+        <!-- <input
           class="form-control"
           type="text"
           name="post[image]"
           placeholder="image link"
-        />
+        /> -->
       </div>
       <div class="form-group">
         <label>Content</label>
