--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -3,12 +3,14 @@
   <div class="row">
     <div class="col-md-10 col-lg-8 mx-auto mb-5">
       <h2 class="text-center mt-5"><%= post.title %></h2>
-      <img class="img-fluid" src="<%= post.image %>" />
-      <span><%= post.created.toDateString() %></span>
-      <div class="text-break">
+      <img class="img-fluid" src="/img/posts/<%= post.image %>" />
+      <div class="text-break mt-3">
         <p><%= post.body %></p>
         <p>
-          <em>Posted by <%= post.author.username %> </em>
+          <em
+            >Posted by <%= post.author.username %> at <%=
+            post.created.toDateString() %>
+          </em>
         </p>
       </div>
       <% if (currentUser && post.author.id.equals(currentUser._id)) { %>
