added required to input fields

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -13,6 +13,7 @@
         id="inputUsername"
         name="username"
         placeholder="username"
+        required
       />
     </div>
     <div class="form-group">
@@ -23,6 +24,8 @@
         id="inputPassword"
         name="password"
         placeholder="password"
+        minlength="8"
+        required
       />
     </div>
     <div class="text-center">
