removed EJS auto-formatter

--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -13,8 +13,8 @@
       <div class="form-group">
         <label>Comment</label>
         <textarea class="form-control" name="comment[text]" rows="8" required>
-<%= comment.text %></textarea
-        >
+          <%= comment.text %>
+        </textarea>
       </div>
       <div class="text-center">
         <button class="btn btn-primary" type="submit">Edit the comment</button>
